--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,9 @@ name: Python application
 
 on:
   push:
-    branches: [ stable ]
+    branches: [ testing ]
   pull_request:
-    branches: [ stable ]
+    branches: [ testing ]
 
 jobs:
   build:
